--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-<meta name="theme-color" content="#2e7d32">
 
 <title>Kiểm Kê</title>
 
+<!-- PWA -->
 <link rel="manifest" href="manifest.json">
+
+<!-- iOS icon (BẮT BUỘC) -->
+<link rel="apple-touch-icon" href="icon-512.png">
+
+<!-- iOS PWA -->
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+<meta name="apple-mobile-web-app-title" content="Kiểm Kê">
+
+<!-- Theme -->
+<meta name="theme-color" content="#2e7d32">
 
 <style>
 body {
@@ -278,7 +287,7 @@ items.forEach((it,i)=>{
     `;
 });
 
-// đăng ký service worker
+// service worker
 if ('serviceWorker' in navigator) {
   navigator.serviceWorker.register('sw.js');
 }
