--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link rel="manifest" href="manifest.json">
 
 <!-- iOS icon (BẮT BUỘC) -->
-<link rel="apple-touch-icon" href="icon-512.png">
+<link rel="apple-touch-icon" href="icon-512.png.PNG">
 
 <!-- iOS PWA -->
 <meta name="apple-mobile-web-app-capable" content="yes">
